--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     </modules>
 
     <properties>
+        <mysql-connector.version>5.1.44</mysql-connector.version>
+        <seata.version>1.4.2</seata.version>
         <springboot.version>2.1.1.RELEASE</springboot.version>
         <java.version>1.8</java.version>
         <druid-spring-boot-starter.version>1.1.10</druid-spring-boot-starter.version>
@@ -74,33 +76,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <repositories>
-        <repository>
-            <id>mvnrepository</id>
-            <name>mvnrepository</name>
-            <url>http://www.mvnrepository.com/</url>
-            <layout>default</layout>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>sonatype</id>
-            <name>sonatype</name>
-            <url>http://oss.sonatype.org/</url>
-            <layout>default</layout>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 
     <build>
         <plugins>
