--- a/seata-at/sbm-business-service/pom.xml
+++ b/seata-at/sbm-business-service/pom.xml
@@ -19,6 +19,10 @@
             <groupId>io.seata</groupId>
             <artifactId>sbm-common-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
