--- a/seata-at/sbm-order-service/pom.xml
+++ b/seata-at/sbm-order-service/pom.xml
@@ -16,6 +16,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.seata</groupId>
             <artifactId>sbm-common-service</artifactId>
         </dependency>
